corrigir endereços de style.css e components

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minha Página Inicial</title>
-  <link rel="stylesheet" href="assets/css/estilo.css">
+  <title>Decodificador de texto</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
   <div id="header"></div>
@@ -15,6 +15,6 @@
   
   <div id="footer"></div>
   
-  <script src="assets/js/script.js"></script>
+  <script src="/assets/js/script.js"></script>
 </body>
 </html>
