Modularizar ítens principais na página principal

--- a/index.html
+++ b/index.html
@@ -9,25 +9,11 @@
 </head>
 <body>
   <main class="apresentacao">
-    <div id="cabecalho"></div>
+    <section id="cabecalho"></section>
 
-    <section class="apresentacao__entrada">
-      <form action="">
-        <input type="text" placeholder="Digite seu texto">
-        <div class="apresentacao__entrada__observacao">
-          <p class="apresentacao__entrada__observacao__iconeAtencao">!</p>
-          <p class="apresentacao__entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
-        </div>
-        <div>
-          <button type="submit" value="Criptografar">Criptografar</button>
-          <button type="submit" value="Descriptografar">Descriptografar</button>
-        </div>
-      </form>
-    </section>
+    <section id="entrada"></section>
 
-    <section class="apresentacao__saida">
-      <div id="apresentacao__saida__conteudo"></div>
-    </section>
+    <section id="saida"></section>
   </main>   
     
   </div>
