--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       </nav>
     </header>
     <section class="apresentacao__entrada">
-      <textarea id="entrada" class="apresentacao__entrada__campo" rows="13" cols="40" placeholder="Digite seu texto" ></textarea>
+      <textarea id="entrada" class="apresentacao__entrada__campo" rows="13" cols="40" placeholder="Digite seu texto"></textarea>
       <div class="apresentacao__entrada__observacao">
         <p class="apresentacao__entrada__observacao__iconeAtencao">!</p>
         <p class="apresentacao__entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
       </div>
       <div class="apresentacao__entrada__botoes">
-        <button onclick="criptografar()" class="apresentacao__entrada__botoes__criptografar" value="Criptografar">Criptografar</button>
-        <button onclick="descriptografar()" class="apresentacao__entrada__botoes__descriptografar"  value="Descriptografar">Descriptografar</button>
+        <button onclick="criptografar(1)" class="apresentacao__entrada__botoes__criptografar" value="Criptografar">Criptografar</button>
+        <button onclick="criptografar(2)" class="apresentacao__entrada__botoes__descriptografar"  value="Descriptografar">Descriptografar</button>
       </div>
     </section>
     <section class="apresentacao__saida">
