--- a/index.html
+++ b/index.html
@@ -11,25 +11,23 @@
   <main class="apresentacao">
     <header class="apresentacao__cabecalho">
       <nav class="apresentacao__cabecalho__menu">
-        <div class="apresentacao__cabecalho__menu__logo">
-          <img class="apresentacao__cabecalho__menu__logo__imagem" src="/assets/images/logo.png" alt="Logo da Alura">
-        </div>
+        <img class="apresentacao__cabecalho__menu__logo" src="/assets/images/logo.png" alt="Logo da Alura">
         <div class="apresentacao__cabecalho__menu__opcao">
           <div class="apresentacao__cabecalho__menu__opcao__seletor">
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__texto" value="TT">TT</button>
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__acessibilidade" value="AC">AC</button>
+            <button class="apresentacao__cabecalho__menu__opcao__seletor__ativo" value="TT">TT</button>
+            <button class="apresentacao__cabecalho__menu__opcao__seletor__desativado" value="AC">AC</button>
           </div>
         </div>
         <div class="apresentacao__cabecalho__menu__opcao">
           <div class="apresentacao__cabecalho__menu__opcao__seletor">
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__portugues" value="PT">PT</button>
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__espanhol" value="ES">ES</button>
+            <button class="apresentacao__cabecalho__menu__opcao__seletor__ativo" value="PT">PT</button>
+            <button class="apresentacao__cabecalho__menu__opcao__seletor__desativado" value="ES">ES</button>
           </div>
         </div>
       </nav>
     </header>
     <section class="apresentacao__entrada">
-      <textarea id="entrada" class="apresentacao__entrada__campo" rows="13" cols="40" placeholder="Digite seu texto"></textarea>
+      <textarea id="entrada" class="apresentacao__entrada__campo" cols="40" placeholder="Digite seu texto"></textarea>
       <div class="apresentacao__entrada__observacao">
         <p class="apresentacao__entrada__observacao__iconeAtencao">!</p>
         <p class="apresentacao__entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
