Ajustado tamanho do campo de entrada

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <section class="apresentacao__entrada">
-      <textarea id="entrada" class="apresentacao__entrada__campo" cols="40" placeholder="Digite seu texto"></textarea>
+      <textarea id="entrada" class="apresentacao__entrada__campo" cols="40" rows="5" placeholder="Digite seu texto"></textarea>
       <div class="apresentacao__entrada__observacao">
         <p class="apresentacao__entrada__observacao__iconeAtencao">!</p>
         <p class="apresentacao__entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
