Adicionado acessibilidade para telas maiores que 1025

--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
     <header class="apresentacao__cabecalho">
       <nav class="apresentacao__cabecalho__menu">
         <img class="apresentacao__cabecalho__menu__logo" src="/assets/images/logo.png" alt="Logo da Alura">
-        <div class="apresentacao__cabecalho__menu__opcao">
-          <div class="apresentacao__cabecalho__menu__opcao__seletor">
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__ativo" value="TT">TT</button>
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__desativado" value="AC">AC</button>
-          </div>
-        </div>
-        <div class="apresentacao__cabecalho__menu__opcao">
-          <div class="apresentacao__cabecalho__menu__opcao__seletor">
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__ativo" value="PT">PT</button>
-            <button class="apresentacao__cabecalho__menu__opcao__seletor__desativado" value="ES">ES</button>
-          </div>
-        </div>
       </nav>
+      <section class="apresentacao__cabecalho__acessibilidade">
+        <div class="apresentacao__cabecalho__acessibilidade__opcao">
+          <div class="apresentacao__cabecalho__acessibilidade__opcao__seletor">
+            <button class="apresentacao__cabecalho__acessibilidade__opcao__seletor__ativo" value="TT">TT</button>
+            <button class="apresentacao__cabecalho__acessibilidade__opcao__seletor__desativado" value="AC">AC</button>
+          </div>
+        </div>
+        <div class="apresentacao__cabecalho__acessibilidade__opcao">
+          <div class="apresentacao__cabecalho__acessibilidade__opcao__seletor">
+            <button class="apresentacao__cabecalho__acessibilidade__opcao__seletor__ativo" value="PT">PT</button>
+            <button class="apresentacao__cabecalho__acessibilidade__opcao__seletor__desativado" value="ES">ES</button>
+          </div>
+        </div>
+      </section>
     </header>
     <section class="apresentacao__entrada">
-      <textarea id="entrada" class="apresentacao__entrada__campo" cols="40" rows="5" placeholder="Digite seu texto"></textarea>
+      <textarea id="entrada" class="apresentacao__entrada__campo"  rows="5" placeholder="Digite seu texto"></textarea>
       <div class="apresentacao__entrada__observacao">
         <p class="apresentacao__entrada__observacao__iconeAtencao">!</p>
         <p class="apresentacao__entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
