--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Decodificador de texto</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="https://wkyoshimatsu.github.io/decodificador-texto/style.css">
 </head>
 <body>
   <main class="apresentacao">
@@ -57,6 +57,6 @@
   <footer class="rodape">
     <p class="rodape__conteudo">&copy; 2024 Washington Kiyoshi Yoshimatsu</p>
   </footer>
-  <script src="/script.js" defer></script>
+  <script type="text/javascript" src="https://wkyoshimatsu.github.io/decodificador-texto/script.js" defer></script>
 </body>
 </html>
