Alterado logo e ícone

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="https://wkyoshimatsu.github.io/assets/images/icon.png">
   <title>Decodificador de texto</title>
   <link rel="stylesheet" href="https://wkyoshimatsu.github.io/decodificador-texto/style.css">
   <!-- <link rel="stylesheet" href="\style.css"> -->
@@ -12,7 +13,7 @@
   <main class="apresentacao">
     <header class="apresentacao__cabecalho">
       <nav class="apresentacao__cabecalho__menu">
-        <img class="apresentacao__cabecalho__menu__logo" src="/assets/images/logo.png" alt="Logo da Alura">
+        <img class="apresentacao__cabecalho__menu__logo" src="https://wkyoshimatsu.github.io/decodificador-texto/assets/images/logo.png" alt="Logo da Alura">
       </nav>
       <section class="apresentacao__cabecalho__acessibilidade" >
         <div class="apresentacao__cabecalho__acessibilidade__opcao">
@@ -44,7 +45,7 @@
     </section>
     <section class="apresentacao__saida">
       <section id="nenhumaMensagemEncontrada" class="apresentacao__saida__nenhumaMensagemEncontrada">
-        <img id="nenhumaMensagemEncontrada__imagem" class="apresentacao__saida__nenhumaMensagemEncontrada__imagem" src="/assets/images/nenhumaMensagemEncontrada.jpg" alt="Pessoa ajoelhada com lupa na mão investigando um diamante">
+        <img id="nenhumaMensagemEncontrada__imagem" class="apresentacao__saida__nenhumaMensagemEncontrada__imagem" src="https://wkyoshimatsu.github.io/decodificador-texto/assets/images/nenhumaMensagemEncontrada.jpg" alt="Pessoa ajoelhada com lupa na mão investigando um diamante">
         <div id="nenhumaMensagemEncontrada__conteudo" class="apresentacao__saida__nenhumaMensagemEncontrada__conteudo">
             <p id="nenhumaMensagemEncontrada__conteudo__titulo" class="apresentacao__saida__nenhumaMensagemEncontrada__conteudo__titulo">Nenhuma mensagem encontrada</p>
             <p id="nenhumaMensagemEncontrada__conteudo__descricao" class="apresentacao__saida__nenhumaMensagemEncontrada__conteudo__descricao">Digite um texto que você deseja criptografar ou descriptografar.</p>
@@ -59,6 +60,7 @@
   </div>
   <footer class="rodape">
     <p class="rodape__conteudo">&copy; 2024 Washington Kiyoshi Yoshimatsu</p>
+    <a href="https://www.flaticon.com/br/icones-gratis/decodificar" title="decodificar ícones">Decodificar ícones criados por Freepik - Flaticon</a>
   </footer>
   <script type="text/javascript" src="https://wkyoshimatsu.github.io/decodificador-texto/script.js" defer></script>
   <!-- <script type="text/javascript" src="\script.js" defer></script> -->
