--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://wkyoshimatsu.github.io/assets/images/icon.png">
+  <link rel="icon" type="image/png" href="https://wkyoshimatsu.github.io/decodificador-texto/assets/images/icon.png">
   <title>Decodificador de texto</title>
   <link rel="stylesheet" href="https://wkyoshimatsu.github.io/decodificador-texto/style.css">
   <!-- <link rel="stylesheet" href="\style.css"> -->
