Implementado script para ajuste de altura do textarea

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main class="apresentacao">
     <header class="apresentacao__cabecalho">
       <nav class="apresentacao__cabecalho__menu">
-        <img class="apresentacao__cabecalho__menu__logo" src="https://wkyoshimatsu.github.io/decodificador-texto/assets/images/logo.png" alt="Logo da Alura">
+        <img class="apresentacao__cabecalho__menu__logo" src="https://wkyoshimatsu.github.io/decodificador-texto/assets/images/logo.png" alt="Logo - Criptografar">
       </nav>
       <section class="apresentacao__cabecalho__acessibilidade" >
         <div class="apresentacao__cabecalho__acessibilidade__opcao">
@@ -31,8 +31,8 @@
       </section>
     </header>
     <section class="apresentacao__entrada">
-      <div class="apresentacao__entrada__texto">
-        <textarea id="entrada" class="apresentacao__entrada__texto__campo"  rows="3" placeholder="Digite seu texto"></textarea>
+      <div id="apresentacao__entrada__texto" class="apresentacao__entrada__texto">
+        <textarea id="entrada" class="apresentacao__entrada__texto__campo" placeholder="Digite seu texto"></textarea>
         <div class="apresentacao__entrada__texto__observacao">
           <p class="apresentacao__entrada__texto__observacao__iconeAtencao">!</p>
           <p class="apresentacao__entrada__texto__observacao__conteudo">Apenas letras minúsculas e sem acento.</p>
@@ -60,7 +60,7 @@
   </div>
   <footer class="rodape">
     <p class="rodape__conteudo">&copy; 2024 Washington Kiyoshi Yoshimatsu</p>
-    <a href="https://www.flaticon.com/br/icones-gratis/decodificar" title="decodificar ícones">Decodificar ícones criados por Freepik - Flaticon</a>
+    <p class="rodape__conteudo" href="https://www.flaticon.com/br/icones-gratis/decodificar" title="decodificar ícones">Decodificar ícones criados por Freepik - Flaticon</p>
   </footer>
   <script type="text/javascript" src="https://wkyoshimatsu.github.io/decodificador-texto/script.js" defer></script>
   <!-- <script type="text/javascript" src="\script.js" defer></script> -->
